// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error occurs when done pressed 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              Object {
                "marginTop": 8,
              },
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          }
        }
      >
        <TextInput
          multiline={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          fontWeight="semibold"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Points
        </Text>
        <TextInput
          multiline={false}
          onChangeText={[Function]}
          placeholder="Points"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Due Dates
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 54,
              },
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#008EE2",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              Add Due Date
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`modal saving is shown on assignment update 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              Object {
                "marginTop": 8,
              },
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          }
        }
      >
        <TextInput
          multiline={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          fontWeight="semibold"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Points
        </Text>
        <TextInput
          multiline={false}
          onChangeText={[Function]}
          placeholder="Points"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Due Dates
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 54,
              },
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#008EE2",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              Add Due Date
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={true}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              Object {
                "marginTop": 8,
              },
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Object {
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          }
        }
      >
        <TextInput
          multiline={true}
          onChangeText={[Function]}
          placeholder="Title"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          fontWeight="semibold"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Object {
                "flex": 1,
              },
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Points
        </Text>
        <TextInput
          multiline={false}
          onChangeText={[Function]}
          placeholder="Points"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "borderBottomColor": "#D8DBDE",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#D8DBDE",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Due Dates
        </Text>
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "height": 54,
              },
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#008EE2",
                  "fontSize": 16,
                  "fontWeight": "bold",
                }
              }
            >
              Add Due Date
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
